# nessie_provider

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  Makefile  Pipfile  README.md  index.html  mkdocs.yml  pyproject.toml  setup.cfg  sitemap.xml
.github/workflows/: build.yml  documentation.yml
airflow_provider_nessie/: __init__.py
airflow_provider_nessie/example_dags/: basic_nessie.py  dummy_dag.py  spark_nessie_iceberg.py
airflow_provider_nessie/hooks/: __init__.py  nessie_hook.py
airflow_provider_nessie/operators/: __init__.py  commit_operator.py  create_branch_operator.py  delete_branch_operator.py  merge_branch_operator.py
search/: search_index.json
tests/: __init__.py  conftest.py  test_sample.py
